--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>คำนวณค่าเฉลี่ย Order Picker</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" /> </head>
+    <link rel="stylesheet" href="Song-style.css" /> 
+    <link rel="stylesheet" href="style.css" />
+</head>
 <body>
     <div class="background"></div>
     <div class="content-wrapper fade-slide-in">
         <main>
             <h1 class="title-resize">📊 คำนวณค่าเฉลี่ย Order Picker</h1>
+            
             <input type="number" id="sku" placeholder="กรอกจำนวน SKU ทั้งหมด" min="0">
             <input type="number" id="mu" placeholder="กรอกจำนวน MU ทั้งหมด" min="0">
-            <input type="number" id="days" placeholder="กรอกจำนวนวันทำงาน" min="1"> <button onclick="calculateTargets()">🔍 คำนวณค่าเฉลี่ย</button> <div id="results" class="results-container">
+            <input type="number" id="days" placeholder="กรอกจำนวนวันทำงาน" min="1">
+            
+            <button onclick="calculateTargets()">🔍 คำนวณค่าเฉลี่ย</button>
+
+            <div id="results" class="results-container">
                 </div>
 
             <footer>
