--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <main>
             <h1 class="title-resize">📊 คำนวณค่าเฉลี่ย Order Picker</h1>
             
-            <input type="number" id="sku" placeholder="กรอกจำนวน SKU ทั้งหมด" min="0">
-            <input type="number" id="mu" placeholder="กรอกจำนวน MU ทั้งหมด" min="0">
-            <input type="number" id="days" placeholder="กรอกจำนวนวันทำงาน" min="1">
+            <input type="number" id="sku" placeholder="📦 กรอกจำนวน SKU ทั้งหมด" min="0">
+            <input type="number" id="mu" placeholder="📏 กรอกจำนวน MU ทั้งหมด" min="0">
+            <input type="number" id="days" placeholder="🗓️ กรอกจำนวนวันทำงาน" min="1">
             
             <button onclick="calculateTargets()">🔍 คำนวณค่าเฉลี่ย</button>
 
