--- a/index.html
+++ b/index.html
@@ -3,87 +3,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>โปรแกรมจัดสินค้า by Suneii</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
+    <title>คำนวณค่าเฉลี่ยและยอดจัด</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500&display=swap" rel="stylesheet">
+    <style>
+        /* เพิ่มสไตล์สำหรับปุ่มใหม่และส่วนแสดงผลลัพธ์ */
+        .daily-sales-button {
+            background: linear-gradient(45deg, #FF9800, #FFC107); /* สีส้ม-เหลือง */
+            color: white;
+            margin-top: 15px; /* ระยะห่างจากปุ่มด้านบน */
+            padding: 12px; /* ลด padding เล็กน้อย */
+            font-size: 1.1em; /* ปรับขนาด font */
+        }
+
+        .daily-sales-button:hover {
+            background: linear-gradient(45deg, #f57c00, #ffb300);
+        }
+
+        #dailySalesResult {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: rgba(255, 255, 255, 0.15);
+            border-radius: 8px;
+            color: #fff;
+            font-size: 1.1em;
+            text-align: center;
+            display: none; /* ซ่อนไว้ก่อนจนกว่าจะมีผลลัพธ์ */
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+    </style>
 </head>
 <body>
-    <div class="background"></div>
-    <div class="content-wrapper fade-slide-in">
-        <main>
-            <h1 class="title-no-wrap">✨ ยินดีต้อนรับสู่โปรแกรมจัดสินค้า ✨</h1>
-            
-            <input type="number" id="dailyGoalInput" placeholder="เป้าหมาย SKU/วัน">
-            <input type="number" id="muGoalInput" placeholder="เป้าหมาย MU/วัน">
-            <button id="calculateButton">📊 คำนวณ</button>
-            
-            <button id="dailyAverageButton" class="action-button" style="margin-top: 2em;">📈 ค่าเฉลี่ยยอดจัดรายวัน</button>
-
-        </main>
-
-        <footer>
-            <p>💖 ขอให้จัดของได้เยอะๆ ยอดปังๆ ครับ! 💖</p>
-            <p>สร้างสรรค์โดย Suneii Dev.</p>
-        </footer>
+    <div class="background-image"></div>
+    <div class="container">
+        <h1>กรอกข้อมูล</h1>
+        <form id="averageForm">
+            <div class="form-group">
+                <label for="sku">SKU</label>
+                <input type="number" id="sku" name="sku" required>
+            </div>
+            <div class="form-group">
+                <label for="mu">MU</label>
+                <input type="number" id="mu" name="mu" required>
+            </div>
+            <div class="form-group">
+                <label for="days">จำนวนวันทำงาน</label>
+                <input type="number" id="days" name="days" required>
+            </div>
+            <button type="submit">คำนวณค่าเฉลี่ย</button>
+            <button type="button" id="calculateDailySalesBtn" class="daily-sales-button">คำนวณยอดจัดรายวัน 💰</button>
+        </form>
+        <div id="dailySalesResult"></div>
     </div>
 
-    <button id="duckButton" class="floating-button" aria-label="ไปหน้าเป็ด">🦆</button>
-    <button id="fullscreenButton" class="floating-button" aria-label="เปิด/ปิดเต็มจอ" style="margin-top: 80px;">📱</button>
+    <a href="songs.html" class="floating-button left">🦆</a>
+    <button id="fullscreenBtn" class="floating-button right">📱</button>
+
+    <footer>
+        <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
+        <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
+        <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
+        <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
+        <p>พัฒนาโดย Jack Makro © 2025</p>
+        <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
+        <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
+        <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
+    </footer>
 
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const dailyGoalInput = document.getElementById('dailyGoalInput');
-            const muGoalInput = document.getElementById('muGoalInput');
-            const calculateButton = document.getElementById('calculateButton');
-            const duckButton = document.getElementById('duckButton');
-            const fullscreenButton = document.getElementById('fullscreenButton');
-            const dailyAverageButton = document.getElementById('dailyAverageButton'); // เพิ่ม Element ของปุ่มใหม่
+        document.getElementById('averageForm').addEventListener('submit', function(event) {
+            event.preventDefault();
 
-            // โหลดค่าที่บันทึกไว้ใน Local Storage
-            const savedSkuGoal = localStorage.getItem('skuDailyGoal');
-            const savedMuGoal = localStorage.getItem('muDailyGoal');
+            const sku = parseFloat(document.getElementById('sku').value);
+            const mu = parseFloat(document.getElementById('mu').value);
+            const days = parseFloat(document.getElementById('days').value);
 
-            if (savedSkuGoal) {
-                dailyGoalInput.value = savedSkuGoal;
-            }
-            if (savedMuGoal) {
-                muGoalInput.value = savedMuGoal;
+            if (isNaN(sku) || isNaN(mu) || isNaN(days) || days <= 0) {
+                alert('กรุณากรอกข้อมูลตัวเลขให้ถูกต้อง และจำนวนวันต้องมากกว่า 0');
+                return;
             }
 
-            calculateButton.addEventListener('click', () => {
-                const skuDaily = dailyGoalInput.value;
-                const muDaily = muGoalInput.value;
+            const average = ((sku / 12) + (mu / 34)) / (2 * days);
+            window.location.href = `average.html?avg=${average.toFixed(2)}`;
+        });
 
-                // บันทึกค่าลง Local Storage
-                localStorage.setItem('skuDailyGoal', skuDaily);
-                localStorage.setItem('muDailyGoal', muDaily);
+        // --- ฟังก์ชันใหม่สำหรับคำนวณยอดจัดรายวัน ---
+        document.getElementById('calculateDailySalesBtn').addEventListener('click', function() {
+            const sku = parseFloat(document.getElementById('sku').value);
+            const mu = parseFloat(document.getElementById('mu').value);
+            const days = parseFloat(document.getElementById('days').value);
+            const dailySalesResultDiv = document.getElementById('dailySalesResult');
 
-                // ส่งค่าไปยัง daily_average.html
-                window.location.href = `daily_average.html?skuDaily=${skuDaily}&muDaily=${muDaily}`;
-            });
+            if (isNaN(sku) || isNaN(mu) || isNaN(days)) {
+                dailySalesResultDiv.textContent = 'กรุณากรอกข้อมูล SKU, MU และจำนวนวันให้ครบถ้วน';
+                dailySalesResultDiv.style.display = 'block';
+                dailySalesResultDiv.style.backgroundColor = 'rgba(255, 0, 0, 0.3)'; // สีแดงเตือน
+                return;
+            }
+            if (days <= 0) {
+                 dailySalesResultDiv.textContent = 'จำนวนวันทำงานต้องมากกว่า 0';
+                 dailySalesResultDiv.style.display = 'block';
+                 dailySalesResultDiv.style.backgroundColor = 'rgba(255, 0, 0, 0.3)';
+                return;
+            }
 
-            duckButton.addEventListener('click', () => {
-                window.location.href = "songs.html";
-            });
+            // --- ส่วนนี้คือ Placeholder ---
+            // !!! โปรดระบุสูตรคำนวณยอดจัดรายวันของคุณที่นี่ !!!
+            // ตัวอย่างสมมติ: ยอดจัดรายวัน = (SKU + MU) / จำนวนวัน
+            // const dailySales = (sku + mu) / days;
+            // dailySalesResultDiv.textContent = `ยอดจัดรายวัน (ตัวอย่าง): ${dailySales.toFixed(2)}`;
 
-            fullscreenButton.addEventListener('click', () => {
-                if (!document.fullscreenElement) {
-                    document.documentElement.requestFullscreen().catch((err) => {
-                        console.error(`ไม่สามารถเปิดโหมดเต็มจอได้: ${err.message}`);
-                    });
-                } else {
+            dailySalesResultDiv.textContent = 'โปรดระบุสูตรคำนวณยอดจัดรายวัน';
+            dailySalesResultDiv.style.display = 'block';
+            dailySalesResultDiv.style.backgroundColor = 'rgba(255, 255, 0, 0.3)'; // สีเหลืองแจ้งเตือน
+        });
+        // --- สิ้นสุดฟังก์ชันใหม่ ---
+
+
+        const fullscreenBtn = document.getElementById('fullscreenBtn');
+        fullscreenBtn.addEventListener('click', () => {
+            const elem = document.documentElement;
+            if (!document.fullscreenElement) {
+                if (elem.requestFullscreen) {
+                    elem.requestFullscreen();
+                } else if (elem.mozRequestFullScreen) { /* Firefox */
+                    elem.mozRequestFullScreen();
+                } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari & Opera */
+                    elem.webkitRequestFullscreen();
+                } else if (elem.msRequestFullscreen) { /* IE/Edge */
+                    elem.msRequestFullscreen();
+                }
+            } else {
+                if (document.exitFullscreen) {
                     document.exitFullscreen();
                 }
-            });
-
-            // เพิ่ม Event Listener สำหรับปุ่ม "ค่าเฉลี่ยยอดจัดรายวัน"
-            dailyAverageButton.addEventListener('click', () => {
-                // ดึงค่าเป้าหมายปัจจุบันจาก input เพื่อส่งไปหน้า daily_average.html
-                const skuDaily = dailyGoalInput.value;
-                const muDaily = muGoalInput.value;
-                window.location.href = `daily_average.html?skuDaily=${skuDaily}&muDaily=${muDaily}`;
-            });
+            }
         });
+
+        function checkSupport() {
+            const canFullscreen = document.documentElement.requestFullscreen ||
+                                  document.documentElement.mozRequestFullScreen ||
+                                  document.documentElement.webkitRequestFullscreen ||
+                                  document.documentElement.msRequestFullscreen;
+
+            if (!canFullscreen) {
+                 fullscreenBtn.style.display = 'none';
+            }
+        }
+        checkSupport();
     </script>
 </body>
 </html>
