--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="background-image"></div>
-    <div class="container">
+    <div class="background"></div> <div class="container">
         <h1>กรอกข้อมูล</h1>
         <form id="averageForm">
             <div class="form-group">
