--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>📦 โปรแกรมคำนวณ Order ที่ต้องจัด</title>
-    <link rel="stylesheet" href="style.css"> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -37,8 +38,7 @@
         </main>
     </div>
 
-    <a href="songs.html" class="floating-button left">🦆</a>
-    <button id="fullscreenBtn" class="floating-button right">📱</button>
+    <a href="songs.html" class="floating-button right">🦆</a> <button id="fullscreenBtn" class="floating-button right">📱</button>
     <button id="calculateDailySalesBtn" class="floating-button right">💰</button>
 
     <footer>
