--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
         </footer>
     </div>
 
-    <button id="duckButton" class="floating-button left" aria-label="ไปหน้าเลือกเพลง">🦆</button>
-    <button id="fullscreenButton" class="floating-button right" aria-label="เปิด/ปิดเต็มจอ">📱</button>
+<button id="homeButton" class="floating-button" style="background: radial-gradient(circle at center, #ffd700ee, #ccaa00cc);">🏠</button>
+<button id="duckButton" class="floating-button" style="background: radial-gradient(circle at center, #87ceeb, #4682b4);">🦆</button>
+<button id="incomeButton" class="floating-button" style="background: radial-gradient(circle at center, #90ee90, #3cb371);">💰</button> 
+<button id="dailyAverageButton" class="floating-button" style="background: radial-gradient(circle at center, #ff8c00, #e67e22);">📅</button>
+<button id="fullscreenButton" class="floating-button" style="background: radial-gradient(circle at center, #ff6347, #ff4500);">↔</button>
 
     <script src="script.js"></script>
 </body>
