--- a/income.html
+++ b/income.html
@@ -4,33 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Incentive Calculator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" /> 
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Incentive Calculator</h1>
-        
-        <label>SKU / day:</label>
-        <input type="number" id="skuInput" placeholder="กรอก SKU/day" />
+    <div class="background"></div> <div class="content-wrapper"> <main> <h1 class="fade-slide-in">Incentive Calculator</h1> <div class="info-card fade-slide-in"> <div class="input-group">
+                    <label for="skuInput">SKU / day:</label>
+                    <input type="number" id="skuInput" placeholder="กรอก SKU/day" />
+                </div>
 
-        <label>MU / day:</label>
-        <input type="number" id="muInput" placeholder="กรอก MU/day" />
+                <div class="input-group">
+                    <label for="muInput">MU / day:</label>
+                    <input type="number" id="muInput" placeholder="กรอก MU/day" />
+                </div>
 
-        <div class="buttons">
-            <button id="calculateBtn">คำนวณ</button>
-            <button id="resetBtn">Reset</button>
-        </div>
+                <div class="buttons-group"> <button id="calculateBtn">คำนวณ</button>
+                    <button id="resetBtn" class="clear-button">Reset</button> </div>
 
-        <div class="result">
-            <p>Tier SKU: <span id="tierSKU">-</span></p>
-            <p>Tier MU: <span id="tierMU">-</span></p>
-            <p>Incentive SKU: <span id="incentiveSKU">0</span> บาท</p>
-            <p>Incentive MU: <span id="incentiveMU">0</span> บาท</p>
-            <p>Incentive รวม: <span id="totalIncentive">0</span> บาท</p>
-            <p>% ของ Limit 300: <span id="percentLimit" class="percent">0%</span></p>
-        </div>
-    </div>
+                <div class="result">
+                    <p>Tier SKU: <span id="tierSKU">-</span></p>
+                    <p>Tier MU: <span id="tierMU">-</span></p>
+                    <p>Incentive SKU: <span id="incentiveSKU">0</span> บาท</p>
+                    <p>Incentive MU: <span id="incentiveMU">0</span> บาท</p>
+                    <p>Incentive รวม: <span id="totalIncentive">0</span> บาท</p>
+                    <p>% ของ Limit 300: <span id="percentLimit" class="percent">0%</span></p>
+                </div>
+            </div>
+        </main>
 
-    <script src="script.js"></script>
+        <footer>
+            <p><strong>ข้อมูลอ้างอิง:</strong><br>
+            * Tier SKU: <= 120 (Tier <= 10), 132-168 (Silver), 180-204 (Gold), 216-240 (Platinum), >= 252 (Diamond)<br>
+            * Payout SKU: 0, 0.50, 0.58, 0.67, 0.83 บาท/SKU ตามลำดับ<br>
+            * Tier MU: <= 340 (Tier <= 10), 374-476 (Silver), 510-578 (Gold), 612-680 (Platinum), >= 714 (Diamond)<br>
+            * Payout MU: 0, 0.18, 0.21, 0.24, 0.29 บาท/MU ตามลำดับ<br>
+            * Limit Incentive รวม: 300 บาท/วัน</p>
+            <p>&copy; 2025 Incentive Calculator by [Your Name/Company]. All rights reserved.</p>
+        </footer>
+
+    </div> <button id="homeButton" class="floating-button" style="background: radial-gradient(circle at center, #ffd700ee, #ccaa00cc);">🏠</button>
+    <button id="duckButton" class="floating-button" style="background: radial-gradient(circle at center, #87ceeb, #4682b4);">🦆</button>
+    <button id="incomeButton" class="floating-button" style="background: radial-gradient(circle at center, #90ee90, #3cb371);">💰</button>
+    <button id="dailyAverageButton" class="floating-button" style="background: radial-gradient(circle at center, #ff8c00, #e67e22);">📅</button>
+    <button id="fullscreenButton" class="floating-button" style="background: radial-gradient(circle at center, #ff6347, #ff4500);">↔</button>
+
+    <script src="income.js"></script> 
+    <script src="script.js"></script> 
 </body>
 </html>
